bug fix + fixed an invisible double link that was behind the paragraphs for the amazon book in the index page.

--- a/index.css
+++ b/index.css
@@ -225,6 +225,8 @@ h3{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width:324px;
+    height:250px;
 }
 
     /* *****  FOOTER ***** */
